--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -61,6 +61,8 @@
     </script>
 
     <script src="js/dashboard.js"></script>
+    <script src="js/cadastrar_servidores.js"></script>
+    <!-- Adicionado para garantir que a função resetarSenha esteja disponível -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
