Cadastro em Lote dos Alunos OK

--- a/frontend/pages/cadastrar_alunos.html
+++ b/frontend/pages/cadastrar_alunos.html
@@ -65,6 +65,11 @@
     </tbody>
 </table>
 
+<!-- Paginação -->
+<div id="pagination" class="mt-4">
+    <!-- Aqui vai aparecer a navegação de páginas -->
+</div>
+
 <!-- 🔹 Modal para editar aluno -->
 <div class="modal fade" id="modalEditarAluno" tabindex="-1">
     <div class="modal-dialog">
