--- a/frontend/pages/cadastrar_infracoes.html
+++ b/frontend/pages/cadastrar_infracoes.html
@@ -15,12 +15,13 @@
             <option value="Gravíssima">Gravíssima</option>
         </select>
     </div>
-    <button type="submit" class="btn btn-primary">Cadastrar Infração</button>
-</form>
 
-<!-- Botão de Cadastro em Lote (Modal) -->
-<button class="btn btn-secondary mt-3" data-bs-toggle="modal" data-bs-target="#modalCadastroLote">Cadastro em
-    Lote</button>
+    <div class="d-flex justify-content-between"> <!-- Adicionando flex para os botões -->
+        <button type="submit" class="btn btn-primary">Cadastrar Infração</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalCadastroLote">Cadastro em Lote</button>
+
+    </div>
+</form>
 
 <h3 class="mt-4">Lista de Infrações Cadastradas</h3>
 
