--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,13 @@
     <title>Login - Sistema de Ocorrências</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <!-- Tom Select CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/tom-select/dist/css/tom-select.css" rel="stylesheet">
+    
+    
+
+
 </head>
 
 <body class="login-page">
@@ -79,42 +86,42 @@
 
     <script>
         document.getElementById("loginForm").addEventListener("submit", async function (event) {
-                event.preventDefault();
+            event.preventDefault();
 
-                const email = document.getElementById("email").value;
-                const senha = document.getElementById("senha").value;
+            const email = document.getElementById("email").value;
+            const senha = document.getElementById("senha").value;
 
-                console.log("📌 Tentando login com:", { email, senha });
+            console.log("📌 Tentando login com:", { email, senha });
 
-                const response = await fetch("http://localhost:3000/auth/login", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ email, senha }) // 🔹 Agora enviamos apenas email e senha
-                });
-
-                try {
-                    const data = await response.json();
-                    console.log("📌 Dados Recebidos:", data);
-
-                    if (response.ok) {
-                        localStorage.setItem("usuario", JSON.stringify(data.usuario));
-
-                        if (data.usuario.alterou_senha == 0) {
-                            console.log("📌 Usuário precisa alterar a senha. Abrindo modal.");
-                            var modal = new bootstrap.Modal(document.getElementById("modalAlterarSenha"));
-                            modal.show();
-                        } else {
-                            console.log("📌 Redirecionando para dashboard...");
-                            window.location.href = "dashboard.html";
-                        }
-                    } else {
-                        showToast(data.erro);
-                    }
-                } catch (error) {
-                    console.error("📌 Erro ao processar JSON:", error);
-                    showToast("Erro ao processar a resposta do servidor.");
-                }
+            const response = await fetch("http://localhost:3000/auth/login", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ email, senha }) // 🔹 Agora enviamos apenas email e senha
             });
+
+            try {
+                const data = await response.json();
+                console.log("📌 Dados Recebidos:", data);
+
+                if (response.ok) {
+                    localStorage.setItem("usuario", JSON.stringify(data.usuario));
+
+                    if (data.usuario.alterou_senha == 0) {
+                        console.log("📌 Usuário precisa alterar a senha. Abrindo modal.");
+                        var modal = new bootstrap.Modal(document.getElementById("modalAlterarSenha"));
+                        modal.show();
+                    } else {
+                        console.log("📌 Redirecionando para dashboard...");
+                        window.location.href = "dashboard.html";
+                    }
+                } else {
+                    showToast(data.erro);
+                }
+            } catch (error) {
+                console.error("📌 Erro ao processar JSON:", error);
+                showToast("Erro ao processar a resposta do servidor.");
+            }
+        });
 
         async function alterarSenha() {
             const novaSenha = document.getElementById("novaSenha").value;
@@ -148,14 +155,16 @@
         }
 
         function showToast(mensagem) {
-                document.getElementById("toastBody").innerText = mensagem;
-                var toast = new bootstrap.Toast(document.getElementById("toastMessage"));
-                toast.show();
-            }
+            document.getElementById("toastBody").innerText = mensagem;
+            var toast = new bootstrap.Toast(document.getElementById("toastMessage"));
+            toast.show();
+        }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/login.js"></script>
+    <!-- Tom Select JS -->
+    <script src="https://cdn.jsdelivr.net/npm/tom-select/dist/js/tom-select.complete.min.js"></script>
 </body>
 
 </html>
