--- a/frontend/pages/relatorios.html
+++ b/frontend/pages/relatorios.html
@@ -1,40 +1,68 @@
 <h2>Gerar Relatórios</h2>
 
-<form>
-    <div class="row">
+<!-- 🔹 Filtros para gerar relatórios -->
+<form id="formRelatorio" class="mb-4">
+    <div class="row g-3">
+
+        <!-- Tipo de Infração -->
         <div class="col-md-3">
-            <label for="tipoInfracao" class="form-label">Tipo de Infração</label>
-            <select class="form-select" id="tipoInfracao">
-                <option value="todas">Todas</option>
-                <option value="leve">Leve</option>
-                <option value="grave">Grave</option>
+            <label for="tipo_infracao" class="form-label">Tipo de Infração</label>
+            <select class="form-select" id="tipo_infracao" name="tipo_infracao">
+                <option value="">Todas</option>
+                <option value="LEVE">Leve</option>
+                <option value="GRAVE">Grave</option>
+                <option value="GRAVISSIMA">Gravíssima</option>
             </select>
         </div>
+
+        <!-- Aluno -->
         <div class="col-md-3">
-            <label for="dataInicio" class="form-label">Data Início</label>
-            <input type="date" class="form-control" id="dataInicio">
-        </div>
-        <div class="col-md-3">
-            <label for="dataFim" class="form-label">Data Fim</label>
-            <input type="date" class="form-control" id="dataFim">
-        </div>
-        <div class="col-md-3">
-            <label for="servidorResponsavel" class="form-label">Servidor Responsável</label>
-            <select class="form-select" id="servidorResponsavel">
-                <option value="todos">Todos</option>
-                <option value="fulano">Fulano</option>
-                <option value="ciclano">Ciclano</option>
+            <label for="aluno" class="form-label">Aluno</label>
+            <select class="form-select" id="aluno" name="aluno">
+                <option value="">Todos</option>
+                <!-- Os alunos serão carregados dinamicamente via JS -->
             </select>
         </div>
+
+        <!-- Servidor Responsável -->
+        <div class="col-md-3">
+            <label for="servidor" class="form-label">Servidor Responsável</label>
+            <select class="form-select" id="servidor" name="servidor">
+                <option value="">Todos</option>
+                <!-- Os servidores serão carregados dinamicamente via JS -->
+            </select>
+        </div>
+
+        <!-- Data Início -->
+        <div class="col-md-3">
+            <label for="data_inicio" class="form-label">Data Início</label>
+            <input type="date" class="form-control" id="data_inicio" name="data_inicio">
+        </div>
+
+        <!-- Data Fim -->
+        <div class="col-md-3">
+            <label for="data_fim" class="form-label">Data Fim</label>
+            <input type="date" class="form-control" id="data_fim" name="data_fim">
+        </div>
+
     </div>
 
-    <button class="btn btn-primary mt-3">Filtrar</button>
+    <!-- Botão Filtrar -->
+    <div class="mt-4">
+        <button type="submit" class="btn btn-primary" id="btnFiltrar">
+            <i class="fas fa-filter"></i> Filtrar
+        </button>
+
+        <button type="button" class="btn btn-success" id="btnExportarPDF">
+            <i class="fas fa-file-pdf"></i> Exportar para PDF
+        </button>
+    </div>
 </form>
 
+<!-- 🔹 Tabela de resultados -->
 <h3 class="mt-4">Resultados</h3>
-
-<table class="table table-striped mt-3">
-    <thead>
+<table class="table table-striped table-bordered mt-3">
+    <thead class="table-light">
         <tr>
             <th>ID</th>
             <th>Aluno</th>
@@ -51,5 +79,3 @@
         </tr>
     </tbody>
 </table>
-
-<button class="btn btn-success">Exportar para PDF</button>
