Busca Inteligente Servidores OK

--- a/frontend/pages/cadastrar_servidores.html
+++ b/frontend/pages/cadastrar_servidores.html
@@ -34,8 +34,17 @@
     </div>
 </form>
 
+
+
 <!-- Tabela de Servidores -->
 <h3 class="mt-4">Servidores Cadastrados</h3>
+
+<!-- 🔹 Campo de Busca para Filtro Inteligente -->
+<div class="mt-5 mb-3">
+    <label for="inputBuscaServidores" class="form-label">🔍 Buscar Servidores</label>
+    <input type="text" class="form-control" id="inputBuscaServidores" placeholder="Digite nome, email, SIAPE ou tipo">
+</div>
+
 <table class="table table-striped mt-3">
     <thead>
         <tr>
