--- a/frontend/pages/cadastrar_alunos.html
+++ b/frontend/pages/cadastrar_alunos.html
@@ -69,10 +69,11 @@
 
 
 
-<h3 class="mt-4">Lista de Alunos</h3>
+<h3 class="mt-4">Alunos Cadastrados</h3>
 
 <!-- 🔍 Campo de Busca (Novo) -->
 <div class="mt-4 mb-3">
+    <label for="inputBuscaServidores" class="form-label">🔍 Buscar Alunos</label>
     <input type="text" id="inputBuscaAlunos" class="form-control"
         placeholder="Buscar alunos por nome, turma ou curso...">
 </div>
