--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,23 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Sistema de Ocorrências</title>
+
+    <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- Tom Select CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tom-select/dist/css/tom-select.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    
 
-
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body class="login-page">
+
     <script>
+        // Redireciona se houver usuário logado (mantém isso!)
         document.addEventListener("DOMContentLoaded", function () {
             const usuario = JSON.parse(sessionStorage.getItem("usuario"));
             if (usuario) {
-                // Se tiver usuário logado, direciona imediatamente ao dashboard
                 window.location.href = "dashboard.html";
             }
         });
@@ -33,27 +35,23 @@
                 <img src="assets/img/logo.png" alt="Logo IFNMG Campus Almenara" class="logo">
             </div>
             <h3 class="text-center mb-4">Sistema de Registro de Ocorrências</h3>
+
+            <!-- Formulário de Login -->
             <form id="loginForm">
                 <div class="mb-3">
                     <label for="email" class="form-label">E-mail</label>
                     <input type="email" id="email" class="form-control" placeholder="Digite seu e-mail" required>
                 </div>
+
                 <div class="mb-3">
                     <label for="senha" class="form-label">Senha</label>
                     <input type="password" id="senha" class="form-control" placeholder="Digite sua senha" required>
                 </div>
+
                 <button type="submit" class="btn btn-primary w-100">Entrar</button>
             </form>
-            <div id="mensagem" class="mt-3 text-center text-danger"></div>
-        </div>
-    </div>
 
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div id="toastMessage" class="toast align-items-center text-bg-primary border-0" role="alert">
-            <div class="d-flex">
-                <div class="toast-body" id="toastBody"></div>
-                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast"></button>
-            </div>
+            <div id="mensagem" class="mt-3 text-center text-danger"></div>
         </div>
     </div>
 
@@ -84,89 +82,18 @@
         </div>
     </div>
 
-    <script>
-        document.getElementById("loginForm").addEventListener("submit", async function (event) {
-            event.preventDefault();
-
-            const email = document.getElementById("email").value;
-            const senha = document.getElementById("senha").value;
-
-            console.log("📌 Tentando login com:", { email, senha });
-
-            const response = await fetch("http://localhost:3000/auth/login", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ email, senha }) // 🔹 Agora enviamos apenas email e senha
-            });
-
-            try {
-                const data = await response.json();
-                console.log("📌 Dados Recebidos:", data);
-
-                if (response.ok) {
-                    localStorage.setItem("usuario", JSON.stringify(data.usuario));
-
-                    if (data.usuario.alterou_senha == 0) {
-                        console.log("📌 Usuário precisa alterar a senha. Abrindo modal.");
-                        var modal = new bootstrap.Modal(document.getElementById("modalAlterarSenha"));
-                        modal.show();
-                    } else {
-                        console.log("📌 Redirecionando para dashboard...");
-                        window.location.href = "dashboard.html";
-                    }
-                } else {
-                    showToast(data.erro);
-                }
-            } catch (error) {
-                console.error("📌 Erro ao processar JSON:", error);
-                showToast("Erro ao processar a resposta do servidor.");
-            }
-        });
-
-        async function alterarSenha() {
-            const novaSenha = document.getElementById("novaSenha").value;
-            const confirmarSenha = document.getElementById("confirmarSenha").value;
-            const usuario = JSON.parse(localStorage.getItem("usuario"));
-
-            if (!novaSenha || novaSenha.length < 6) {
-                document.getElementById("erroSenha").innerText = "A senha deve ter pelo menos 6 caracteres.";
-                return;
-            }
-
-            if (novaSenha !== confirmarSenha) {
-                document.getElementById("erroSenha").innerText = "As senhas não coincidem.";
-                return;
-            }
-
-            const response = await fetch("http://localhost:3000/auth/alterar-senha", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ id: usuario.id, senha: novaSenha })
-            });
-
-            const data = await response.json();
-
-            if (response.ok) {
-                alert("Senha alterada com sucesso! Faça login novamente.");
-                window.location.reload();
-            } else {
-                document.getElementById("erroSenha").innerText = data.erro;
-            }
-        }
-
-        function showToast(mensagem) {
-            document.getElementById("toastBody").innerText = mensagem;
-            var toast = new bootstrap.Toast(document.getElementById("toastMessage"));
-            toast.show();
-        }
-    </script>
-
+    <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/login.js"></script>
-    <!-- Tom Select JS -->
+
+    <!-- Tom Select / Select2 -->
     <script src="https://cdn.jsdelivr.net/npm/tom-select/dist/js/tom-select.complete.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
+    <!-- SweetAlert2 Alerts.js (depois do sweetalert2) -->
+    <script src="js/alerts.js"></script>
+
+    <!-- Lógica de Login -->
+    <script src="js/login.js"></script>
 </body>
 
 </html>
