--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Sistema de Ocorrências</title>
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- FontAwesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <!-- Tom Select CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet">
 
-    <!-- Select2 CSS (adicionado para os filtros dos relatórios) -->
+    <!-- Select2 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 </head>
 
@@ -26,6 +32,7 @@
             </button>
 
             <a class="navbar-brand fs-4 fw-bold text-light" href="#">Sistema de Ocorrências</a>
+
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
@@ -39,6 +46,7 @@
         </div>
     </nav>
 
+    <!-- 🔹 Conteúdo Principal -->
     <div class="container-fluid">
         <div class="row">
             <!-- 🔹 Menu lateral -->
@@ -48,45 +56,151 @@
                 </div>
             </div>
 
-            <!-- 🔹 Área do Conteúdo Principal -->
+            <!-- 🔹 Área principal -->
             <div class="col-md-10 p-4" id="conteudoPrincipal">
                 <h2 id="tituloDashboard">Painel de Controle</h2>
                 <div class="alert alert-info">Selecione uma opção no menu para começar.</div>
 
-                <!-- 🔹 Área onde as páginas serão carregadas dinamicamente -->
+                <!-- 🔹 Conteúdo dinâmico -->
                 <div id="conteudoDinamico"></div>
             </div>
         </div>
     </div>
 
-    <!-- 🔹 Scripts -->
+    <!-- 🔹 Modal de Alteração de Senha -->
+    <div class="modal fade" id="modalAlterarSenha" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="modalAlterarSenhaLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Alteração de Senha Obrigatória</h5>
+                </div>
+                <div class="modal-body">
+                    <p>Você precisa definir uma nova senha antes de continuar no sistema.</p>
+
+                    <div class="mb-3">
+                        <label for="novaSenha" class="form-label">Nova Senha</label>
+                        <input type="password" id="novaSenha" class="form-control" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="confirmarSenha" class="form-label">Confirme a Nova Senha</label>
+                        <input type="password" id="confirmarSenha" class="form-control" required>
+                    </div>
+
+                    <p id="erroSenha" class="text-danger"></p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" onclick="alterarSenha()">Salvar Nova Senha</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 🔹 Scripts JS -->
     <script src="js/config.js"></script>
+
     <script>
-        // 🔹 Alternar menu lateral ao clicar no botão
+        // 🔹 Alternar menu lateral
         document.getElementById("toggleMenu").addEventListener("click", function () {
             document.getElementById("menuLateral").classList.toggle("d-none");
         });
     </script>
 
+    <!-- Scripts Custom -->
     <script src="js/dashboard.js"></script>
     <script src="js/session.js"></script>
     <script src="js/cadastrar_servidores.js"></script>
-    <!-- Adicionado para garantir que a função resetarSenha esteja disponível -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- jQuery (necessário para Select2 funcionar!) -->
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- Select2 JS -->
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-    <!-- Tom Select JS (caso use em outras partes) -->
+    <!-- Tom Select JS -->
     <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>
 
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Alerts Custom -->
+    <script src="js/alerts.js"></script>
+
+    <!-- Script de alteração de senha -->
+    <script>
+        async function alterarSenha() {
+            const novaSenha = document.getElementById("novaSenha").value.trim();
+            const confirmarSenha = document.getElementById("confirmarSenha").value.trim();
+            const erroSenha = document.getElementById("erroSenha");
+
+            erroSenha.innerText = "";
+
+            if (!novaSenha || !confirmarSenha) {
+                erroSenha.innerText = "Preencha ambos os campos de senha.";
+                return;
+            }
+
+            if (novaSenha.length < 6) {
+                erroSenha.innerText = "A senha deve ter no mínimo 6 caracteres.";
+                return;
+            }
+
+            if (novaSenha !== confirmarSenha) {
+                erroSenha.innerText = "As senhas não coincidem.";
+                return;
+            }
+
+            const usuario = JSON.parse(sessionStorage.getItem("usuario"));
+
+            try {
+                const resposta = await fetch(`${BASE_URL}/servidores/${usuario.id}/alterarSenha`, {
+                    method: "PUT",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ senha: novaSenha })
+                });
+
+                if (resposta.ok) {
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'Senha alterada com sucesso!',
+                        showConfirmButton: false,
+                        timer: 2000
+                    });
+
+                    usuario.alterou_senha = 1;
+                    sessionStorage.setItem("usuario", JSON.stringify(usuario));
+
+                    setTimeout(() => {
+                        window.location.reload();
+                    }, 2000);
+
+                } else {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Erro ao alterar senha!',
+                        text: 'Tente novamente mais tarde.'
+                    });
+                }
+
+            } catch (error) {
+                console.error("❌ Erro ao alterar senha:", error);
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Erro ao conectar com o servidor!',
+                    text: 'Verifique sua conexão e tente novamente.'
+                });
+            }
+        }
+
+        function logout() {
+            sessionStorage.removeItem("usuario");
+            window.location.href = "index.html";
+        }
+    </script>
 
 </body>
 
