--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,29 +60,38 @@
         aria-labelledby="modalAlterarSenhaLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
+
                 <div class="modal-header">
-                    <h5 class="modal-title">Alteração de Senha Obrigatória</h5>
+                    <h5 class="modal-title" id="modalAlterarSenhaLabel">Alteração de Senha Obrigatória</h5>
                 </div>
+
                 <div class="modal-body">
                     <p>Você precisa definir uma nova senha antes de acessar o sistema.</p>
+
                     <div class="mb-3">
                         <label for="novaSenha" class="form-label">Nova Senha</label>
-                        <input type="password" id="novaSenha" class="form-control" required>
+                        <input type="password" id="novaSenha" class="form-control" placeholder="Digite a nova senha"
+                            required>
                     </div>
+
                     <div class="mb-3">
                         <label for="confirmarSenha" class="form-label">Confirme a Nova Senha</label>
-                        <input type="password" id="confirmarSenha" class="form-control" required>
+                        <input type="password" id="confirmarSenha" class="form-control"
+                            placeholder="Confirme a nova senha" required>
                     </div>
+
                     <p id="erroSenha" class="text-danger"></p>
                 </div>
+
                 <div class="modal-footer">
                     <button class="btn btn-primary" onclick="alterarSenha()">Salvar Nova Senha</button>
                 </div>
+
             </div>
         </div>
     </div>
 
-    <!-- JS -->
+    <!-- JS do Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Tom Select / Select2 -->
@@ -95,6 +104,7 @@
     <!-- Lógica de Login -->
     <script src="js/config.js"></script>
     <script src="js/login.js"></script>
+
 </body>
 
 </html>
