Página de Listar Ocorrências OK

--- a/frontend/pages/listar_ocorrencias.html
+++ b/frontend/pages/listar_ocorrencias.html
@@ -27,7 +27,7 @@
 </table>
 
 <!-- Paginação -->
-<div id="pagination" class="mt-4">
+<div id="paginationOcorrencias" class="mt-4">
     <!-- Aqui vai aparecer a navegação de páginas -->
 </div>
 
@@ -49,7 +49,7 @@
                 <input type="text" id="editarLocal" class="form-control mb-2">
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary" onclick="salvarEdicaoOcorrencia()">Salvar Alterações</button>
+                <button id="btnSalvarEdicaoOcorrencia" class="btn btn-primary">Salvar Alterações</button>
                 <button class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
             </div>
         </div>
