--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -127,6 +127,8 @@
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/@ttskch/select2-bootstrap4-theme@1.5.2/dist/select2-bootstrap4.min.css" rel="stylesheet" />
+
     <!-- Alerts Custom -->
     <script src="js/alerts.js"></script>
 
