Quadro de Ocorrências OK

--- a/frontend/pages/listar_ocorrencias.html
+++ b/frontend/pages/listar_ocorrencias.html
@@ -55,3 +55,18 @@
         </div>
     </div>
 </div>
+
+<!-- 🔍 Modal de Visualização de Imagem -->
+<div class="modal fade" id="modalImagem" tabindex="-1" aria-labelledby="modalImagemLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg"> <!-- modal-lg para imagem maior -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalImagemLabel">Imagem da Ocorrência</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+            </div>
+            <div class="modal-body text-center">
+                <img id="imagemOcorrencia" src="" alt="Imagem da Ocorrência" class="img-fluid rounded shadow">
+            </div>
+        </div>
+    </div>
+</div>
