--- a/frontend/pages/listar_ocorrencias.html
+++ b/frontend/pages/listar_ocorrencias.html
@@ -56,16 +56,16 @@
     </div>
 </div>
 
-<!-- 🔍 Modal de Visualização de Imagem -->
-<div class="modal fade" id="modalImagem" tabindex="-1" aria-labelledby="modalImagemLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg"> <!-- modal-lg para imagem maior -->
+<!-- 🔍 Modal para visualizar imagem da ocorrência -->
+<div class="modal fade" id="modalVisualizarImagem" tabindex="-1" aria-labelledby="modalImagemLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalImagemLabel">Imagem da Ocorrência</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
             </div>
             <div class="modal-body text-center">
-                <img id="imagemOcorrencia" src="" alt="Imagem da Ocorrência" class="img-fluid rounded shadow">
+                <img id="imagemModal" src="" class="img-fluid rounded shadow-sm" alt="Imagem da ocorrência">
             </div>
         </div>
     </div>
