--- a/frontend/pages/cadastrar_ocorrencia.html
+++ b/frontend/pages/cadastrar_ocorrencia.html
@@ -2,10 +2,11 @@
 
 <form id="formOcorrencia">
 
-    <!-- Aluno -->
+    <!-- Alunos -->
     <div class="mb-3">
-        <label for="aluno" class="form-label">Aluno:</label>
-        <select id="aluno" name="aluno" class="form-select" required></select>
+        <label for="aluno" class="form-label">Aluno(s):</label>
+        <select id="aluno" name="alunos[]" class="form-select" multiple required></select>
+        <small class="form-text text-muted">Segure Ctrl (ou Cmd) para selecionar mais de um aluno.</small>
     </div>
 
     <!-- Informações adicionais do Aluno -->
@@ -13,14 +14,12 @@
         <p><strong>Turma:</strong> <span id="infoTurma"></span></p>
         <p><strong>Curso:</strong> <span id="infoCurso"></span></p>
     </div>
-    
 
     <!-- Tipo de Infração -->
     <div class="mb-3">
         <label for="tipo_infracao" class="form-label">Tipo de Infração:</label>
         <select id="tipo_infracao" name="tipo_infracao" class="form-select" required>
             <option value="">Selecione a infração...</option>
-            <!-- As infrações serão carregadas aqui via JS -->
         </select>
     </div>
 
