Correção da hora

--- a/frontend/pages/relatorios.html
+++ b/frontend/pages/relatorios.html
@@ -20,16 +20,30 @@
             <label for="aluno" class="form-label">Aluno</label>
             <select class="form-select" id="aluno" name="aluno">
                 <option value="">Todos</option>
-                <!-- Os alunos serão carregados dinamicamente via JS -->
             </select>
         </div>
 
-        <!-- Servidor Responsável -->
+        <!-- Servidor -->
         <div class="col-md-3">
             <label for="servidor" class="form-label">Servidor Responsável</label>
             <select class="form-select" id="servidor" name="servidor">
                 <option value="">Todos</option>
-                <!-- Os servidores serão carregados dinamicamente via JS -->
+            </select>
+        </div>
+
+        <!-- Curso -->
+        <div class="col-md-3">
+            <label for="curso" class="form-label">Curso</label>
+            <select class="form-select" id="curso" name="curso">
+                <option value="">Todos</option>
+            </select>
+        </div>
+
+        <!-- Turma -->
+        <div class="col-md-3">
+            <label for="turma" class="form-label">Turma</label>
+            <select class="form-select" id="turma" name="turma">
+                <option value="">Todas</option>
             </select>
         </div>
 
@@ -47,7 +61,6 @@
 
     </div>
 
-    <!-- Botão Filtrar -->
     <div class="mt-4">
         <button type="submit" class="btn btn-primary" id="btnFiltrar">
             <i class="fas fa-filter"></i> Filtrar
