--- a/frontend/pages/cadastrar_servidores.html
+++ b/frontend/pages/cadastrar_servidores.html
@@ -21,6 +21,7 @@
         <label for="tipo" class="form-label">Tipo de usuário</label>
         <select class="form-select" id="tipo" required>
             <option value="SERVIDOR" selected>SERVIDOR</option>
+            <option value="GESTOR DE OCORRÊNCIAS">GESTOR DE OCORRÊNCIAS</option>
             <option value="ADMIN">ADMINISTRADOR</option>
         </select>
     </div>
@@ -117,6 +118,7 @@
                     <label for="editTipo" class="form-label">Tipo de usuário</label>
                     <select class="form-select" id="editTipo" required>
                         <option value="SERVIDOR">SERVIDOR</option>
+                        <option value="GESTOR DE OCORRÊNCIAS">GESTOR DE OCORRÊNCIAS</option>
                         <option value="ADMIN">ADMINISTRADOR</option>
                     </select>
                 </div>
