VIsão da Comissão

--- a/frontend/pages/cadastrar_servidores.html
+++ b/frontend/pages/cadastrar_servidores.html
@@ -22,9 +22,10 @@
         <select class="form-select" id="tipo" required>
             <option value="SERVIDOR" selected>SERVIDOR</option>
             <option value="GESTOR DE OCORRÊNCIAS">GESTOR DE OCORRÊNCIAS</option>
+            <option value="COMISSÃO DISCIPLINAR">COMISSÃO DISCIPLINAR</option>
             <option value="ADMIN">ADMINISTRADOR</option>
         </select>
-    </div>
+        </div>
 
     <!-- Botões alinhados lado a lado -->
     <div class="d-flex justify-content-between">
@@ -119,6 +120,7 @@
                     <select class="form-select" id="editTipo" required>
                         <option value="SERVIDOR">SERVIDOR</option>
                         <option value="GESTOR DE OCORRÊNCIAS">GESTOR DE OCORRÊNCIAS</option>
+                        <option value="COMISSÃO DISCIPLINAR">COMISSÃO DISCIPLINAR</option>
                         <option value="ADMIN">ADMINISTRADOR</option>
                     </select>
                 </div>
